{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 31,
  "lineage": "5a3d1c0f-b014-fbd2-8055-c98703b1362e",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_network",
      "name": "host_vpc_nprd",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/prj-o-15032023-nprd-shr-nw/global/networks/vpc-o-shr-nonprod",
            "name": "vpc-o-shr-nonprod",
            "project": "prj-o-15032023-nprd-shr-nw",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-nprd-shr-nw/global/networks/vpc-o-shr-nonprod",
            "subnetworks_self_links": [
              "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-nprd-shr-nw/regions/us-central1/subnetworks/sub-uscent1-o-shr-nonprod",
              "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-nprd-shr-nw/regions/northamerica-northeast1/subnetworks/sub-nae1-o-shr-nonprod",
              "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-nprd-shr-nw/regions/asia-south2/subnetworks/sub-as2-o-shr-nonprod"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "google_compute_network",
      "name": "host_vpc_prd",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/prj-o-15032023-prd-shr-nw/global/networks/vpc-o-shr-prod",
            "name": "vpc-o-shr-prod",
            "project": "prj-o-15032023-prd-shr-nw",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-prd-shr-nw/global/networks/vpc-o-shr-prod",
            "subnetworks_self_links": [
              "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-prd-shr-nw/regions/asia-south1/subnetworks/sub-as1-o-shr-prod",
              "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-prd-shr-nw/regions/europe-north1/subnetworks/sub-euno1-o-shr-prod",
              "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-prd-shr-nw/regions/europe-west1/subnetworks/sub-euwe1-o-shr-prod"
            ]
          }
        }
      ]
    },
    {
      "module": "module.host_vpc[\"0\"]",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/prj-o-15032023-prd-shr-nw/global/networks/vpc-o-shr-prod",
            "mtu": 0,
            "name": "vpc-o-shr-prod",
            "project": "prj-o-15032023-prd-shr-nw",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-prd-shr-nw/global/networks/vpc-o-shr-prod"
          }
        }
      ]
    },
    {
      "module": "module.host_vpc[\"1\"]",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/prj-o-15032023-nprd-shr-nw/global/networks/vpc-o-shr-nonprod",
            "mtu": 0,
            "name": "vpc-o-shr-nonprod",
            "project": "prj-o-15032023-nprd-shr-nw",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-nprd-shr-nw/global/networks/vpc-o-shr-nonprod"
          }
        }
      ]
    },
    {
      "module": "module.host_vpc_subnets[\"0\"]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "asia-south1/sub-as1-o-shr-prod",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-03-17T05:58:55.485-07:00",
            "gateway_address": "10.1.3.1",
            "id": "projects/prj-o-15032023-prd-shr-nw/regions/asia-south1/subnetworks/sub-as1-o-shr-prod",
            "ip_cidr_range": "10.1.3.0/24",
            "name": "sub-as1-o-shr-prod",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-prd-shr-nw/global/networks/vpc-o-shr-prod",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "prj-o-15032023-prd-shr-nw",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-prd-shr-nw/regions/asia-south1/subnetworks/sub-as1-o-shr-prod",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.host_vpc.google_compute_network.vpc",
            "module.host_vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ]
        },
        {
          "index_key": "europe-north1/sub-euno1-o-shr-prod",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-03-17T05:58:53.899-07:00",
            "gateway_address": "10.1.1.1",
            "id": "projects/prj-o-15032023-prd-shr-nw/regions/europe-north1/subnetworks/sub-euno1-o-shr-prod",
            "ip_cidr_range": "10.1.1.0/24",
            "name": "sub-euno1-o-shr-prod",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-prd-shr-nw/global/networks/vpc-o-shr-prod",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "prj-o-15032023-prd-shr-nw",
            "purpose": "PRIVATE",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-prd-shr-nw/regions/europe-north1/subnetworks/sub-euno1-o-shr-prod",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.host_vpc.google_compute_network.vpc",
            "module.host_vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ]
        },
        {
          "index_key": "europe-west1/sub-euwe1-o-shr-prod",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-03-17T05:58:54.710-07:00",
            "gateway_address": "10.1.2.1",
            "id": "projects/prj-o-15032023-prd-shr-nw/regions/europe-west1/subnetworks/sub-euwe1-o-shr-prod",
            "ip_cidr_range": "10.1.2.0/24",
            "name": "sub-euwe1-o-shr-prod",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-prd-shr-nw/global/networks/vpc-o-shr-prod",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "prj-o-15032023-prd-shr-nw",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-prd-shr-nw/regions/europe-west1/subnetworks/sub-euwe1-o-shr-prod",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.host_vpc.google_compute_network.vpc",
            "module.host_vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ]
        }
      ]
    },
    {
      "module": "module.host_vpc_subnets[\"1\"]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "asia-south2/sub-as2-o-shr-nonprod",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-03-17T05:58:55.574-07:00",
            "gateway_address": "10.2.3.1",
            "id": "projects/prj-o-15032023-nprd-shr-nw/regions/asia-south2/subnetworks/sub-as2-o-shr-nonprod",
            "ip_cidr_range": "10.2.3.0/24",
            "name": "sub-as2-o-shr-nonprod",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-nprd-shr-nw/global/networks/vpc-o-shr-nonprod",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "prj-o-15032023-nprd-shr-nw",
            "purpose": "PRIVATE",
            "region": "asia-south2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-nprd-shr-nw/regions/asia-south2/subnetworks/sub-as2-o-shr-nonprod",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.host_vpc.google_compute_network.vpc",
            "module.host_vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ]
        },
        {
          "index_key": "northamerica-northeast1/sub-nae1-o-shr-nonprod",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-03-17T05:58:53.254-07:00",
            "gateway_address": "10.2.2.1",
            "id": "projects/prj-o-15032023-nprd-shr-nw/regions/northamerica-northeast1/subnetworks/sub-nae1-o-shr-nonprod",
            "ip_cidr_range": "10.2.2.0/24",
            "name": "sub-nae1-o-shr-nonprod",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-nprd-shr-nw/global/networks/vpc-o-shr-nonprod",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "prj-o-15032023-nprd-shr-nw",
            "purpose": "PRIVATE",
            "region": "northamerica-northeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-nprd-shr-nw/regions/northamerica-northeast1/subnetworks/sub-nae1-o-shr-nonprod",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.host_vpc.google_compute_network.vpc",
            "module.host_vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ]
        },
        {
          "index_key": "us-central1/sub-uscent1-o-shr-nonprod",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-03-17T05:58:52.117-07:00",
            "gateway_address": "10.2.1.1",
            "id": "projects/prj-o-15032023-nprd-shr-nw/regions/us-central1/subnetworks/sub-uscent1-o-shr-nonprod",
            "ip_cidr_range": "10.2.1.0/24",
            "name": "sub-uscent1-o-shr-nonprod",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-nprd-shr-nw/global/networks/vpc-o-shr-nonprod",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "prj-o-15032023-nprd-shr-nw",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-nprd-shr-nw/regions/us-central1/subnetworks/sub-uscent1-o-shr-nonprod",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.host_vpc.google_compute_network.vpc",
            "module.host_vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_firewall_rule[\"0\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "fw-o-shr-prod-egress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-03-17T05:58:37.622-07:00",
            "deny": [],
            "description": "Prod VPC Egress Firewall rule",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prj-o-15032023-prd-shr-nw/global/firewalls/fw-o-shr-prod-egress",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "fw-o-shr-prod-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-prd-shr-nw/global/networks/vpc-o-shr-prod",
            "priority": 1000,
            "project": "prj-o-15032023-prd-shr-nw",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-prd-shr-nw/global/firewalls/fw-o-shr-prod-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "prd-egress-allow"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "fw-o-shr-prod-ingress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "443",
                  "3389",
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-03-17T05:58:37.160-07:00",
            "deny": [],
            "description": "Prod VPC Ingress Firewall rule",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prj-o-15032023-prd-shr-nw/global/firewalls/fw-o-shr-prod-ingress",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "fw-o-shr-prod-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-prd-shr-nw/global/networks/vpc-o-shr-prod",
            "priority": 1000,
            "project": "prj-o-15032023-prd-shr-nw",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-prd-shr-nw/global/firewalls/fw-o-shr-prod-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "prd-ingress-allow"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc_firewall_rule[\"1\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "fw-o-shr-nonprod-egress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-03-17T05:58:37.713-07:00",
            "deny": [],
            "description": "Non-Prod VPC Egress Firewall rule",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prj-o-15032023-nprd-shr-nw/global/firewalls/fw-o-shr-nonprod-egress",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "fw-o-shr-nonprod-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-nprd-shr-nw/global/networks/vpc-o-shr-nonprod",
            "priority": 1000,
            "project": "prj-o-15032023-nprd-shr-nw",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-nprd-shr-nw/global/firewalls/fw-o-shr-nonprod-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "nprd-egress-allow"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "fw-o-shr-nonprod-ingress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "443",
                  "3389",
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-03-17T05:58:37.317-07:00",
            "deny": [],
            "description": "Non-Prod VPC Ingress Firewall rule",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prj-o-15032023-nprd-shr-nw/global/firewalls/fw-o-shr-nonprod-ingress",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "fw-o-shr-nonprod-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-nprd-shr-nw/global/networks/vpc-o-shr-nonprod",
            "priority": 1000,
            "project": "prj-o-15032023-nprd-shr-nw",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-o-15032023-nprd-shr-nw/global/firewalls/fw-o-shr-nonprod-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "nprod-ingress-allow"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}